[tool.poetry]
name = "aerleon"
version = "1.9.0"
description = "A firewall generation tool"
authors = ["Rob Ankeny <ankenyr@gmail.com>", "Jason Benterou <jason.benterou@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/aerleon/aerleon"
repository = "https://github.com/aerleon/aerleon"
keywords = ["firewall", "networking", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls"
]
include = [
    "LICENSE",
    "README.md",
    "tools",
]
packages = [{include = "aerleon"}, {include = "aerleon/lib"}, {include = "tools"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
ply = "^3.11"
absl-py = "^1.2.0"
typing_extensions = "^4.4.0"
importlib-metadata = { version = "^4.2", markers = "python_version <= '3.10'" }

black = {version = "^22.8.0", optional=true}
coverage = {version = "^6.4.4", optional=true}
flake8 = {version = "*", optional=true}
Flake8-pyproject = {version = "*", optional=true}
nox = {version = "^2022.8.7", optional=true}
nox-poetry = {version = "^1.0.1", optional=true}
pre-commit = {version = "^2.20.0", optional=true}
pyperf = {version = "^2.4.1", optional=true}
psutil = {version = "^5.9.2", optional=true}
mkdocs = {version = "1.3.1", optional=true}
mkdocs-material = {version = "8.3.9", optional=true}
mkdocstrings = {version = "0.19", optional=true}
mkdocstrings-python = {version = "0.7.1", optional=true}
mkdocs-version-annotations = {version = "1.0.0", optional=true}
sigstore = {version = "^1.0.0", optional=true}
isort = {version = "^5.11.4", optional=true}


[tool.poetry.extras]
devtools = [
    "black", "coverage", "flake8", "Flake8-pyproject", "nox", "nox-poetry", "pre-commit",
    "pyperf", "psutil", "sigstore", "isort"
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python",
    "mkdocs-version-annotations"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = {version = "^7.1.3"}

[tool.poetry.scripts]
aclgen = "aerleon.aclgen:EntryPoint"
cgrep = "tools.cgrep:EntryPoint"
aclcheck = "aerleon.aclcheck_cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# extend-exclude = "/__pycache__|\.ref/"
line-length = 99
skip-string-normalization = true
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-complexity = 10
max-line-length = 99
extend-ignore = ['E203', 'C901']
exclude = ['.git','.github','venv','site-packages','__pycache__','doc','build','dist','policies']

[tool.coverage.run]
branch = true
command_line = '-m pytest'
